<resources>
    <string name="app_name">MediaPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="loop">Loop</string>
    <string name="shuffle">Shuffle</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="title_activity_preferences">preferences</string>
</resources>
