<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ets.mediaplayer.MediaPlayerActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonLayout"
        android:background="@color/background">

        <LinearLayout
            android:id="@+id/visualizerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <ets.mediaplayer.VisualizerView
                android:id="@+id/myvisualizerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/IsSynced"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Preferences"/>

            <ToggleButton
                android:id="@+id/ServerControl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ToggleButton"
                android:textOff="Control Client"
                android:textOn="Control Server"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"/>

            <Button
                android:id="@+id/playButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="play"
                android:text="@string/play"
                android:visibility="visible"/>

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="next"
                android:text="@string/next"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/seekBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:text="00:00"/>

            <SeekBar
                android:id="@+id/timeSeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"/>

            <TextView
                android:id="@+id/totalTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:text="99:99"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/infoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/seekBarLayout"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="shuffle"
                android:text="@string/shuffle"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/songText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="My heart will go on"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/artistText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="Céline Dion"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/albumText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:text="Titanic"
                    android:textAlignment="center"/>
            </LinearLayout>

            <ToggleButton
                android:id="@+id/repeatButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="loop"
                android:text="@string/loop"
                android:textOff="@string/loop"
                android:textOn="@string/loop"/>
        </LinearLayout>

        <!--<LinearLayout-->
        <!--android:id="@+id/volumeLayout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_above="@+id/infoLayout">-->

        <!--<SeekBar-->
        <!--android:id="@+id/volumeSeekBar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1" />-->

        <!--</LinearLayout>-->

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
